trying to get searching through a database in an html searchbar to work

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -6,4 +6,5 @@
   <app-flight-form></app-flight-form>
   <app-train-form></app-train-form>
   <app-bus-form></app-bus-form>
+  <app-user-bus-booking></app-user-bus-booking>
 </main>
