configuring docker and nginx and more

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -7,4 +7,9 @@
   <app-train-form></app-train-form>
   <app-bus-form></app-bus-form>
   <app-user-bus-booking></app-user-bus-booking>
+  <app-station-search 
+  [stationType]="'airport'"
+  [placeholder]="'Search airports...'"
+  [label]="'Departure Airport'">
+</app-station-search>
 </main>
