--- a/frontend/src/app/components/admin-bus-station-form/admin-bus-station-form.html
+++ b/frontend/src/app/components/admin-bus-station-form/admin-bus-station-form.html
@@ -20,7 +20,7 @@
              [class.invalid]="adminBusStationForm.get('busStationFullName')?.invalid && (adminBusStationForm.get('busStationFullName')?.dirty || adminBusStationForm.get('busStationFullName')?.touched)">
     @if (isFieldInvalid('busStationFullName')) {
             <div class="text-danger">
-                Enter the full name of the airport
+                Enter the full name of the bus station
             </div>
       }
     </div><br>
@@ -40,11 +40,11 @@
                 Enter the code for the bus station
             </div>
       }
-        </div>
+    <br></div>
 
     <!-- Bus Station Location field group -->
     <div class="form-group">
-      <label for="busStationCityLocation">Bus Station Location</label>
+      <label for="busStationCityLocation">Bus Station City Location</label>
       <input type="text" 
              class="form-control" 
              id="busStationCityLocation" 
