--- a/frontend/src/app/components/client-form/client-form.html
+++ b/frontend/src/app/components/client-form/client-form.html
@@ -195,7 +195,7 @@
         <h2>Login</h2>
       </div>
 
-      <form [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()" class="client-form">
+      <form [formGroup]="loginForm" (ngSubmit)="onLogin()" class="client-form">
         <div class="form-group">
           <label for="loginUsername">Username or Email *</label>
           <input
